# ControlManual

./: .gitignore  README.md  build.sh  cmui.py  config.json  esh.c  main.py  mkdocs.yml  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_docs.txt  run.py  setup.cfg  setup.py  style.py  tailwind.config.js  test.c  tox.ini
.github/workflows/: tests.yml
ControlManual/: __main__.py
ControlManual/src/: app.py  check_health.py  client.py  command_worker.py  config.py  console.py  constants.py  files.py  handler.py  help.py  info.py  logger.py  main.py  typing.py  typings.py
app/: README.md  config.json  main.py  requirements.txt
app/src/: __init__.py  check_health.py  client.py  cm_dir.py  config.py  console.py  error.py  logger.py  theme.py
cmpy/: controlmanual.pyi  mod.c  pyproject.toml  setup.py
commands/alias/: main.py
commands/aliases/: main.py
commands/call/: main.py
commands/clear/: main.py
commands/create/: main.py
commands/exit/: main.py
commands/function/: main.py
commands/http/: main.py
commands/if/: main.py
commands/init/: main.py
commands/json/: main.py
commands/listdir/: main.py
commands/package/: main.py
commands/path/: main.py
commands/read/: main.py
commands/reload/: main.py
commands/remove/: main.py
commands/terminal/: main.py
commands/title/: main.py
commands/up/: main.py
commands/vars/: main.py
commands/version/: main.py
commands/wait/: main.py
commands/write/: main.py
core/: builtins.c  exception.c  main.c  object.c  session.c  utils.c
core/include/: builtins.h  cm.h  (+3 more)
docs/: index.md  release_notes.md  session.md
html/: base.html  dist.css  main.css  tailwind.config.js
include/: controlmanual.h
server/: README.md  config.json  main.py
src/: __init__.py  client.py  cm_dir.py  config.py  console.py  logger.py
tests/: a.py  test_main.py  test_none.py
(+317 files in other folders)
