[metadata]
name = controlmanual
description = Advanced TUI command interpreter
author = ZeroIntensity
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
version = 0.0.4.1
long_description = file: README.md
project_urls = 
    Bug Tracker = https://github.com/ControlManual/ControlManual/issues
    Repo = https://github.com/ControlManual/ControlManual/

[options]
packages =
    controlmanual
    controlmanual.source.
    controlmanual.source.constants
    controlmanual.source.core
    controlmanual.source.core.widgets
    controlmanual.source.core.widgets.utils
    controlmanual.source.utils
    controlmanual.source.utils.commands
install_requires =
    colorama>=0.4.4
    click>=7.1.2
    psutil>=5.8.0
    rich>=10.15.1
    distro>=1.6.0
    aiofiles>=0.7.0
    toml>=0.10.2
    textual>=0.1.15
    py-cpuinfo>=8.0.0
    typeguard>=2.13.3
    dload>=0.6
    pyfiglet>=0.8.post1
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
controlmanual = py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401,F403,F405